# search-engine-from-scratch

./: CLAUDE.md  Cargo.toml  README.md
src/: app.rs  documents.rs  lib.rs  main.rs
src/routes/: documents.rs
