[package]
name = "search-engine-from-scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tracing = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.uuid]
version = "1.12.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
serde_json = "1.0"
